--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Match.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Match.cshtml
@@ -1,9 +1,10 @@
-﻿@using DirectAgents.Web.Areas.MatchPortal.Helpers
-@model DirectAgents.Web.Areas.MatchPortal.Models.MatchProductVM
+﻿@using CakeExtracter.Common.MatchingPortal.Providers
+@model CakeExtracter.Common.MatchingPortal.Models.Product
 
 <div id="carousel-example-generic" class="carousel slide container well">
     @using (Html.BeginForm("Match", "Products", FormMethod.Post))
     {
+        @Html.HiddenFor(m => m.ProductId)
         <!-- Wrapper for slides -->
         <div class="col-md-offset-2 col-md-8" role="listbox">
             <h3>Product Matching Interface</h3>
@@ -37,7 +38,7 @@
                 </div>
                 <div class="row">
                     <hr/>
-                    @foreach (var item in MpTempDataContext.SearchResults)
+                    @foreach (var item in SelectOptionsProvider.GetSearchResults(Model.ProductId))
                     {
                         <div class="row">
                             @Html.RadioButtonFor(m => m.MatchedResultId, item.Id, new { @class = "col-md-2 input-sm" })
@@ -68,18 +69,19 @@
                 </div>
                 <hr/>
                 <div class="row">
-                    <button type="button" name="action" value="match" class="btn btn-default btn-lg btn-block">Match</button>
+                    <button type="submit" class="btn btn-default btn-lg btn-block">Match</button>
                 </div>
                 <hr/>
             </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control" style="color: black" href="#carousel-example-generic" role="button">
+        <a class="left carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.PreviousId == 0 ? Model.Id : ViewBag.PreviousId })" role="button">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" style="color: black" href="#carousel-example-generic" role="button">
+
+        <a class="right carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.NextId == 0 ? Model.Id : ViewBag.NextId })" role="button">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
