DIRAGBA-419 - Added column sets for reports, extra filtering for client data frames

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Result.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Result.cshtml
@@ -87,7 +87,7 @@
                 <input type="submit" value="Export Full Data frame" class="btn btn-default btn-lg btn-block" formaction="@Url.Action("ExportFullFrame")" formmethod="post" />
             </div>
             <div class="col-md-4">
-                <input type="submit" value="Export Client Data frame" class="btn btn-default btn-lg btn-block" formaction="@Url.Action("ExportFullFrame")" formmethod="post" />
+                <input type="submit" value="Export Client Data frame" class="btn btn-default btn-lg btn-block" formaction="@Url.Action("ExportClientFrame")" formmethod="post" />
             </div>
         </div>
     }
