--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Match.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Products/Match.cshtml
@@ -1,19 +1,21 @@
 ﻿@using CakeExtracter.Common.MatchingPortal.Providers
 @model CakeExtracter.Common.MatchingPortal.Models.Product
 
+<script>
+    function handleClick(radioValue) {
+        $('#newProductTitle').val(radioValue);
+    }
+</script>
 <div id="carousel-example-generic" class="carousel slide container well">
-    @using (Html.BeginForm("Match", "Products", FormMethod.Post))
+    @using (Html.BeginForm())
     {
         @Html.HiddenFor(m => m.ProductId)
         <!-- Wrapper for slides -->
         <div class="col-md-offset-2 col-md-8" role="listbox">
-            <h3>Product Matching Interface</h3>
+            <h3>Product Matching</h3>
             <div class="item">
                 <div class="row">
                     <img src="@Model.ProductImageLink" alt="Product Image" class="col-md-4 col-md-offset-4">
-                </div>
-                <div class="row">
-                    <a href="@Model.ProductPageLink" class="col-md-offset-5">Product Page</a>
                 </div>
                 <hr/>
                 <div class="row">
@@ -26,7 +28,7 @@
                 <div class="row">
                     @Html.LabelFor(m => m.NewProductTitle, new { @class = "col-md-4 font-weight-bold" })
                     <div class="col-md-6">
-                        @Html.TextBoxFor(m => m.NewProductTitle, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.NewProductTitle, new { @class = "form-control", @id = "newProductTitle"})
                     </div>
                 </div>
                 <hr/>
@@ -41,7 +43,7 @@
                     @foreach (var item in SelectOptionsProvider.GetSearchResults(Model.ProductId))
                     {
                         <div class="row">
-                            @Html.RadioButtonFor(m => m.MatchedResultId, item.Id, new { @class = "col-md-2 input-sm" })
+                            @Html.RadioButtonFor(m => m.MatchedResultId, item.Id, new { @class = "col-md-2 input-sm", @onchange = "handleClick('" + item.Headline + "')" })
                             <div class="col-md-8">
                                 <div class="media">
                                     <div class="media-left">
@@ -75,15 +77,21 @@
             </div>
         </div>
 
-        <!-- Controls -->
-        <a class="left carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.PreviousId == 0 ? Model.Id : ViewBag.PreviousId })" role="button">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
+        if (ViewBag.PreviousId != 0)
+        {
+            <a class="left carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.PreviousId == 0 ? Model.Id : ViewBag.PreviousId })" role="button">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+        }
 
-        <a class="right carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.NextId == 0 ? Model.Id : ViewBag.NextId })" role="button">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        if (ViewBag.NextId != 0)
+        {
+            <a class="right carousel-control" style="color: black" href="@Url.Action("Match", "Products", new { id = ViewBag.NextId == 0 ? Model.Id : ViewBag.NextId })" role="button">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        }
+
     }
 </div>
