--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Shared/_LayoutMatchPortal.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/MatchPortal/Views/Shared/_LayoutMatchPortal.cshtml
@@ -24,6 +24,10 @@
             <div class="navbar-header">
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="@Url.Action("Index", "Products")">Entry to Product Matching</a></li>
+                    <li><a href="@Url.Action("Result", "Products")">Product Data QA</a></li>
+                </ul>
             </div>
         </div>
     </nav>
