--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/StatsGauges/Index.cshtml
@@ -9,15 +9,17 @@
         <th style="text-align:center">DaySums</th>
         <th style="text-align:center">ConvSums</th>
         <th style="text-align:center">CallSums</th>
+        <th style="text-align:center">VideoSums</th>
     </tr>
     @foreach (var sa in Model.OrderBy(x => x.Channel != "Google").ThenBy(x => x.Channel))
     {
-        <tr>
-            <td>@Html.ActionLink(sa.Channel, "IndexGauge", "SearchAccounts", new { channel = sa.Channel.ToLower() }, null)</td>
-            <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
-            <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
-            <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
-        </tr>
+    <tr>
+        <td>@Html.ActionLink(sa.Channel, "IndexGauge", "SearchAccounts", new { channel = sa.Channel.ToLower() }, null)</td>
+        <td style="text-align:center">@sa.MinDaySum.ToShortDateString() - @sa.MaxDaySum.ToShortDateString()</td>
+        <td style="text-align:center">@sa.MinConvSum.ToShortDateString() - @sa.MaxConvSum.ToShortDateString()</td>
+        <td style="text-align:center">@sa.MinCallSum.ToShortDateString() - @sa.MaxCallSum.ToShortDateString()</td>
+        <td style="text-align:center">@sa.MinVidSum.ToShortDateString() - @sa.MaxVidSum.ToShortDateString()</td>
+    </tr>
     }
 </table>
 <br />
