--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchCampaigns/IndexGauge.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/SearchAdmin/Views/SearchCampaigns/IndexGauge.cshtml
@@ -13,22 +13,24 @@
         <th style="text-align:center">DaySums</th>
         <th style="text-align:center">ConvSums</th>
         <th style="text-align:center">CallSums</th>
+        <th style="text-align:center">VideoSums</th>
     </tr>
     @foreach (var sc in Model)
     {
-        <tr>
-            <td style="text-align:right">@(sc.SearchAccount != null ? sc.SearchAccount.SearchProfileId.ToString() : "")</td>
-            <td style="text-align:right">@sc.SearchAccountId</td>
-            <td style="text-align:right">@sc.SearchCampaignId</td>
-            <td>@sc.SearchCampaignName</td>
-            <td style="text-align:center">@sc.MinDaySum.ToShortDateString() - @sc.MaxDaySum.ToShortDateString()</td>
-            <td style="text-align:center">@Html.ActionLink(sc.MinConvSum.ToShortDateString() + " - " + sc.MaxConvSum.ToShortDateString(), "IndexGauge", "SearchConvTypes", new { scId = sc.SearchCampaignId }, null)</td>
-            <td style="text-align:center">@sc.MinCallSum.ToShortDateString() - @sc.MaxCallSum.ToShortDateString()</td>
-            <td>
-                @Html.ActionLink("Edit-", "Edit", new { id = sc.SearchCampaignId })
-                @sc.LCcmpid
-            </td>
-        </tr>
+    <tr>
+        <td style="text-align:right">@(sc.SearchAccount != null ? sc.SearchAccount.SearchProfileId.ToString() : "")</td>
+        <td style="text-align:right">@sc.SearchAccountId</td>
+        <td style="text-align:right">@sc.SearchCampaignId</td>
+        <td>@sc.SearchCampaignName</td>
+        <td style="text-align:center">@sc.MinDaySum.ToShortDateString() - @sc.MaxDaySum.ToShortDateString()</td>
+        <td style="text-align:center">@Html.ActionLink(sc.MinConvSum.ToShortDateString() + " - " + sc.MaxConvSum.ToShortDateString(), "IndexGauge", "SearchConvTypes", new { scId = sc.SearchCampaignId }, null)</td>
+        <td style="text-align:center">@sc.MinCallSum.ToShortDateString() - @sc.MaxCallSum.ToShortDateString()</td>
+        <td style="text-align: center">@sc.MinVidSum.ToShortDateString() - @sc.MaxVidSum.ToShortDateString()</td>
+        <td>
+            @Html.ActionLink("Edit-", "Edit", new { id = sc.SearchCampaignId })
+            @sc.LCcmpid
+        </td>
+    </tr>
     }
 </table>
 <br />
